--- a/styles.css
+++ b/styles.css
@@ -40,27 +40,25 @@ nav {
       "image-2 image-2 promo";
   }
 
+  .promo-image {
+    width: 100%;
+    height: 100%;
+  }
+
   .promo-banner {
     grid-area: promo;
-    width: 100%;
   }
 
   .news-image-1 {
     grid-area: image-1;
-    width: 100%;
-    height: 100%;
   }
 
   .news-image-2 {
     grid-area: image-3;
-    width: 100%;
-    height: 100%;
   }
 
   .news-image-3 {
     grid-area: image-2;
-    width: 100%;
-    height: 100%;
   }
 }
 
@@ -149,18 +147,27 @@ nav a:hover {
 }
 
 /******************************** Latest Products ******************************/
+#products {
+  background-color: gray;
+  padding: 20px;
+}
+
+#products h3 {
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
+  color: #fff;
+  font-size: 40px;
+  margin-bottom: 20px;
+}
 
 .latest-products {
   display: grid;
   grid-template-columns: repeat(5, 20%);
   grid-template-rows: 300px;
   grid-column-gap: 1em;
-  background-color: gray;
 }
 
 
-
-.product img {
+.new-product img {
   width: 100%;
   height: 100%;
 }
