--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,6 @@ nav {
       "image-2 image-2 promo";
   }
 
-  .promo-image {
-    width: 100%;
-    height: 100%;
-  }
-
   .promo-banner {
     grid-area: promo;
   }
@@ -127,24 +122,12 @@ nav a:hover {
   background-color: black;
 }
 
-.promo-banner {
-  width: 100%;
-}
-
-.news-image-1 {
+.promo-image {
   width: 100%;
   height: 100%;
 }
 
-.news-image-2 {
-  width: 100%;
-  height: 100%;
-}
 
-.news-image-3 {
-  width: 100%;
-  height: 100%;
-}
 
 /******************************** Latest Products ******************************/
 #products {
@@ -163,11 +146,71 @@ nav a:hover {
   display: grid;
   grid-template-columns: repeat(5, 20%);
   grid-template-rows: 300px;
-  grid-column-gap: 1em;
+  align-items: center;
+  text-align: center;
 }
-
 
 .new-product img {
   width: 100%;
+  height: 100%;
+}
+
+#click-more {
+  text-decoration: none;
+  color: #fff;
+  font-size: 60px;
+  font-family: sans-serif;
+}
+
+/************************************ Footer **********************************/
+
+footer {
+  display: flex;
+  background-color: black;
+  padding: 20px;
+  height: 100px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+footer p {
+  font-size: 20px;
+  font-family: 'ZCOOL QingKe HuangYou', sans-serif;
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+.fab {
+  margin-right: 10px;
+
+}
+
+.fa-facebook {
+  color: #1f3c88;
+}
+
+.fa-instagram {
+  color: #f857b5;
+}
+
+.fa-twitter {
+  color: #7bcecc;
+}
+
+#social-media {
+  grid-area: social-media;
+}
+
+#copyright {
+  grid-area: copyright;
+}
+
+#company-logo {
+  grid-area: company;
+  height: 100%;
+}
+
+.credit-logo {
   height: 100%;
 }
