--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,32 @@ nav a:hover {
   color: #bc2525;
 }
 
+/************ the dropdown navigation *************/
+.nav-container {
+  float: left;
+  overflow: hidden;
+}
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+}
+
+.dropdown-content a {
+  float: none;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  margin: 20px;
+  min-width: 200px;
+}
+
+.nav-container:hover .dropdown-content {
+  display: block;
+}
+/****************************************/
 #search-container {
   float: right;
   margin: 34px 20px;
@@ -77,11 +102,14 @@ nav a:hover {
   background-color: black;
 }
 
-.promo-image {
+.promo-image, .product-image {
   width: 100%;
   height: 100%;
 }
 
+.promo-image:hover {
+  opacity: 0.9;
+}
 
 /******************************** Latest Products ******************************/
 #products {
@@ -124,7 +152,7 @@ nav a:hover {
   text-align: center;
 }
 
-.new-product:hover .promo-image {
+.new-product:hover .product-image {
   opacity: 0.2;
 }
 
